# GPUBurn

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: gpu_burn.cu
